--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.12",
     "expo": "~45.0.0",
+    "expo-app-loading": "^2.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-check-box": "^2.1.7",
+    "react-native-dropdown-picker": "^5.4.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-popup-dialog": "^0.18.3",
+    "react-native-safe-area-context": "^4.3.1",
+    "react-native-web": "0.17.7",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "roll-picker-native": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
