--- a/package.json
+++ b/package.json
@@ -11,17 +11,27 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.12",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "expo": "~45.0.0",
     "expo-app-loading": "^2.0.0",
     "expo-status-bar": "~1.3.0",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-check-box": "^2.1.7",
+    "react-native-config": "^1.4.6",
+    "react-native-dotenv": "^3.3.1",
     "react-native-dropdown-picker": "^5.4.2",
+    "react-native-full-screen": "^0.0.4",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-immersive": "^2.0.0",
+    "react-native-immersive-mode": "^2.0.0",
     "react-native-popup-dialog": "^0.18.3",
-    "react-native-safe-area-context": "^4.3.1",
+    "react-native-safe-area-context": "4.2.4",
     "react-native-web": "0.17.7",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
