--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-app-loading": "^2.0.0",
     "expo-status-bar": "~1.3.0",
     "express": "^4.18.1",
+    "json-server": "^0.17.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
     "react": "17.0.2",
