--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-community/checkbox": "^0.5.12",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
@@ -24,6 +25,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-async-storage": "^0.0.1",
     "react-native-check-box": "^2.1.7",
     "react-native-config": "^1.4.6",
     "react-native-dotenv": "^3.3.1",
