--- a/package.json
+++ b/package.json
@@ -32,12 +32,18 @@
     "react-native-config": "^1.4.6",
     "react-native-dotenv": "^3.3.1",
     "react-native-dropdown-picker": "^5.4.2",
+    "react-native-elements": "^3.4.2",
     "react-native-full-screen": "^0.0.4",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-immersive": "^2.0.0",
     "react-native-immersive-mode": "^2.0.0",
+    "react-native-paper": "^4.12.4",
     "react-native-popup-dialog": "^0.18.3",
-    "react-native-safe-area-context": "4.2.4",
+    "react-native-redash": "^9.3.1",
+    "react-native-root-toast": "^3.4.0",
+    "react-native-safe-area-context": "^4.2.4",
+    "react-native-simple-toast": "^1.1.4",
+    "react-native-snackbar": "^2.4.0",
     "react-native-web": "0.17.7",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
